--- a/docs/examples/train_segmentation_model.ipynb
+++ b/docs/examples/train_segmentation_model.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mikadishen/Guara2_lotes_vagos/blob/main/docs/examples/train_segmentation_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "vscode": {
           "languageId": "raw"
         },
@@ -556,8 +546,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "accelerator": "GPU"
   },
