--- a/docs/examples/train_segmentation_model.ipynb
+++ b/docs/examples/train_segmentation_model.ipynb
@@ -6,7 +6,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "IJddGrcQKlAR"
+        "id": "sCW0YGa2MNdT"
       },
       "source": [
         "# Train a Semantic Segmentation Model using Segmentation-Models-PyTorch\n",
@@ -23,7 +23,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "TpQ2gHFkKlAW"
+        "id": "sDwrMpTLMNdY"
       },
       "outputs": [],
       "source": [
@@ -36,7 +36,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "TA-pFvILKlAX"
+        "id": "Lf3tCNuMMNda"
       },
       "source": [
         "## Import libraries"
@@ -46,7 +46,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "kZmmsLG-KlAY"
+        "id": "-Im2PXkeMNdb"
       },
       "outputs": [],
       "source": [
@@ -59,7 +59,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "5KcFsjIQKlAZ"
+        "id": "WEsVYpuTMNdb"
       },
       "source": [
         "## Download sample data\n",
@@ -71,16 +71,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bWPJswzyKlAZ"
+        "id": "dwqhnE7TMNdc"
       },
       "outputs": [],
       "source": [
         "train_raster_url = (\n",
-        "    \"https://huggingface.co/datasets/giswqs/geospatial/resolve/main/naip_rgb_train.tif\"\n",
+        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/vexcel%20teste_full_ref.tif\"\n",
         ")\n",
-        "train_vector_url = \"https://huggingface.co/datasets/giswqs/geospatial/resolve/main/naip_train_buildings.geojson\"\n",
+        "train_vector_url = \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/buildings_tree_vicente_piresfinal.geojson\"\n",
         "test_raster_url = (\n",
-        "    \"https://huggingface.co/datasets/giswqs/geospatial/resolve/main/naip_test.tif\"\n",
+        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/vexcel_treino_ref.tif\"\n",
         ")"
       ]
     },
@@ -88,7 +88,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ybO28NZzKlAa"
+        "id": "U8nbWROJMNdd"
       },
       "outputs": [],
       "source": [
@@ -103,7 +103,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "LaQkup5TKlAb"
+        "id": "VeVgvmygMNde"
       },
       "source": [
         "## Visualize sample data"
@@ -113,7 +113,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Ifx99ZAwKlAb"
+        "id": "FNhMaGUAMNdf"
       },
       "outputs": [],
       "source": [
@@ -124,7 +124,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "soghAGV6KlAb"
+        "id": "Fgpdb1wdMNdf"
       },
       "outputs": [],
       "source": [
@@ -135,7 +135,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "08jAojUIKlAc"
+        "id": "88rQp5M7MNdg"
       },
       "outputs": [],
       "source": [
@@ -148,7 +148,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "AgRtQW1FKlAc"
+        "id": "8OIzm2SoMNdh"
       },
       "source": [
         "## Create training data\n",
@@ -160,7 +160,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fkWGXgUcKlAd"
+        "id": "pULT0oy2MNdh"
       },
       "outputs": [],
       "source": [
@@ -181,7 +181,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "vaY3ZAigKlAd"
+        "id": "A7oyma2aMNdi"
       },
       "source": [
         "## Train semantic segmentation model\n",
@@ -200,7 +200,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "d3BljRxdKlAd"
+        "id": "rP6OpsUgMNdi"
       },
       "outputs": [],
       "source": [
@@ -228,7 +228,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "Xw0KncY5KlAe"
+        "id": "cI6B50viMNdj"
       },
       "source": [
         "### Example 2: SegFormer with resnet152 encoder"
@@ -238,7 +238,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "msnAcyodKlAe"
+        "id": "psvhcmZbMNdk"
       },
       "outputs": [],
       "source": [
@@ -264,7 +264,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "Lf8aCA67KlAf"
+        "id": "ShSNAQu9MNdk"
       },
       "source": [
         "## Run inference\n",
@@ -276,7 +276,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KjtBeH5IKlAf"
+        "id": "qIdlqBpzMNdl"
       },
       "outputs": [],
       "source": [
@@ -289,7 +289,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OiSJOM75KlAg"
+        "id": "niA0o9VBMNdm"
       },
       "outputs": [],
       "source": [
@@ -314,7 +314,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "nzr_IBzRKlAg"
+        "id": "tyTYqcl1MNdm"
       },
       "source": [
         "## Vectorize masks\n",
@@ -326,7 +326,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "QxzU6rucKlAg"
+        "id": "rP-Kj7KRMNdn"
       },
       "outputs": [],
       "source": [
@@ -337,7 +337,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "I01h5IRPKlAh"
+        "id": "kA5bc5LfMNdn"
       },
       "source": [
         "## Add geometric properties"
@@ -347,7 +347,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Mg1boBfGKlAh"
+        "id": "1s9aeF-5MNdn"
       },
       "outputs": [],
       "source": [
@@ -360,7 +360,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "E6RaB4KNKlAi"
+        "id": "qycOm1zgMNdo"
       },
       "source": [
         "## Visualize results"
@@ -370,7 +370,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UFeXblFHKlAi"
+        "id": "ibcE_KNiMNdo"
       },
       "outputs": [],
       "source": [
@@ -381,7 +381,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xSjhNk-QKlAj"
+        "id": "ZbGmRiVZMNdp"
       },
       "outputs": [],
       "source": [
@@ -392,7 +392,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jLfeJHcRKlAj"
+        "id": "_9pb2O1HMNdp"
       },
       "outputs": [],
       "source": [
@@ -403,7 +403,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LU6y4CQ9KlAk"
+        "id": "_xe7IZPOMNdq"
       },
       "outputs": [],
       "source": [
@@ -414,7 +414,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jOJ5mtfbKlAl"
+        "id": "VunK1IHMMNdq"
       },
       "outputs": [],
       "source": [
@@ -432,7 +432,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "gBR4vC7hKlAm"
+        "id": "LKd9WyJrMNdr"
       },
       "source": [
         "## Model Performance Analysis\n",
@@ -444,7 +444,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "EukpzqnqKlAm"
+        "id": "a6AT_US4MNdr"
       },
       "outputs": [],
       "source": [
@@ -458,7 +458,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "unEJ-fx-KlAn"
+        "id": "YyQ60Zn7MNds"
       },
       "source": [
         "![image](https://github.com/user-attachments/assets/9355446f-f9ba-4818-aedb-4bb5dee56813)"
@@ -467,7 +467,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3Y8j8sj2KlAn"
+        "id": "PJP6uxTFMNds"
       },
       "source": [
         "## Performance Metrics\n",
@@ -528,7 +528,8 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "geo",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -544,11 +545,8 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+      "provenance": []
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
