--- a/docs/examples/train_segmentation_model.ipynb
+++ b/docs/examples/train_segmentation_model.ipynb
@@ -3,20 +3,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mikadishen/Guara2_lotes_vagos/blob/main/docs/examples/train_segmentation_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "vscode": {
           "languageId": "raw"
         },
-        "id": "eOn1CJ335eMz"
+        "id": "RIqmLGeY7oHT"
       },
       "source": [
         "# Train a Semantic Segmentation Model using Segmentation-Models-PyTorch\n",
@@ -33,7 +23,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KITso9HA5eM3"
+        "id": "j3Pelp8R7oHY"
       },
       "outputs": [],
       "source": [
@@ -46,7 +36,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "2pgR72Uz5eM6"
+        "id": "z5WkO9RZ7oHe"
       },
       "source": [
         "## Import libraries"
@@ -56,7 +46,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3MzPEhxg5eM8"
+        "id": "Cd9FLW9B7oHe"
       },
       "outputs": [],
       "source": [
@@ -69,7 +59,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "S6s6fG_55eM-"
+        "id": "NyTm1W_I7oHf"
       },
       "source": [
         "## Download sample data\n",
@@ -81,15 +71,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2WCmGjcO5eM_"
+        "id": "Cwh7Epoe7oHf"
       },
       "outputs": [],
       "source": [
         "train_raster_url = (\n",
-        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/blob/main/tomates/treino_rec3.tif\n",
-        "train_vector_url = \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/blob/main/tomates/amostrastomate.geojson\"\n",
+        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tomates/treino_rec3.tif\"\n",
+        ")\n",
+        "train_vector_url = \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tomates/amostrastomate.geojson\"\n",
         "test_raster_url = (\n",
-        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/blob/main/tomates/tomate_hidro2cm2.tif\"\n",
+        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tomates/tomate_hidro2cm2.tif\"\n",
         ")"
       ]
     },
@@ -97,7 +88,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "PGSx6Qwk5eNC"
+        "id": "l99-x7gx7oHh"
       },
       "outputs": [],
       "source": [
@@ -112,7 +103,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "bOEBMYIQ5eND"
+        "id": "7xyEMFUF7oHi"
       },
       "source": [
         "## Visualize sample data"
@@ -122,7 +113,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "og_2pB7S5eNE"
+        "id": "LGJyzy1f7oHi"
       },
       "outputs": [],
       "source": [
@@ -133,7 +124,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dJM9dg7o5eNG"
+        "id": "jijADwiB7oHk"
       },
       "outputs": [],
       "source": [
@@ -144,7 +135,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rZs0f0m-5eNH"
+        "id": "pcZF7sef7oHl"
       },
       "outputs": [],
       "source": [
@@ -157,7 +148,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "EHSLh5bh5eNJ"
+        "id": "zmYC9AGB7oHm"
       },
       "source": [
         "## Create training data\n",
@@ -169,7 +160,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "utlmqLo35eNK"
+        "id": "tsP2ZgKl7oHm"
       },
       "outputs": [],
       "source": [
@@ -190,7 +181,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "dTGpVYPR5eNL"
+        "id": "c11ZedRb7oHn"
       },
       "source": [
         "## Train semantic segmentation model\n",
@@ -209,7 +200,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3I_WkEjw5eNM"
+        "id": "KDZmjbN27oHn"
       },
       "outputs": [],
       "source": [
@@ -237,7 +228,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "3ZMiadgb5eNN"
+        "id": "rWF_WWFl7oHo"
       },
       "source": [
         "### Example 2: SegFormer with resnet152 encoder"
@@ -247,7 +238,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3HTgpEhF5eNO"
+        "id": "W09bXMW67oHo"
       },
       "outputs": [],
       "source": [
@@ -273,7 +264,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "izlfU75U5eNP"
+        "id": "kTotlGqa7oHp"
       },
       "source": [
         "## Run inference\n",
@@ -285,20 +276,20 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2AXXawaY5eNQ"
+        "id": "HEdOzrp87oHp"
       },
       "outputs": [],
       "source": [
         "# Define paths\n",
-        "masks_path = \"tomate2cm2_semantic_prediction.tif\"\n",
-        "model_path = f\"{out_folder}/segformer_models/best_model.pth\""
+        "masks_path = \"naip_test_semantic_prediction.tif\"\n",
+        "model_path = f\"{out_folder}/unet_models/best_model.pth\""
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xQ22TBMN5eNS"
+        "id": "gh5LDdA97oHq"
       },
       "outputs": [],
       "source": [
@@ -307,8 +298,8 @@
         "    input_path=test_raster_path,\n",
         "    output_path=masks_path,\n",
         "    model_path=model_path,\n",
-        "    architecture=\"segformer\",\n",
-        "    encoder_name=\"resnet152\",\n",
+        "    architecture=\"unet\",\n",
+        "    encoder_name=\"resnet34\",\n",
         "    num_channels=3,\n",
         "    num_classes=2,\n",
         "    window_size=512,\n",
@@ -323,7 +314,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "HtpDjRQr5eNT"
+        "id": "iTPA9iuA7oHq"
       },
       "source": [
         "## Vectorize masks\n",
@@ -335,18 +326,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "QwNHzXP-5eNU"
+        "id": "ZTMNth2p7oHq"
       },
       "outputs": [],
       "source": [
-        "output_vector_path = \"tomate2cm2_semantic_prediction.geojson\"\n",
+        "output_vector_path = \"naip_test_semantic_prediction.geojson\"\n",
         "gdf = geoai.orthogonalize(masks_path, output_vector_path, epsilon=2)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UmsHWQpj5eNU"
+        "id": "mnUsVzrP7oHr"
       },
       "source": [
         "## Add geometric properties"
@@ -356,7 +347,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "soIqlVj35eNU"
+        "id": "cfwfWCub7oHr"
       },
       "outputs": [],
       "source": [
@@ -369,7 +360,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "gBtdjAO65eNV"
+        "id": "ZuNOobqw7oHs"
       },
       "source": [
         "## Visualize results"
@@ -379,7 +370,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "J_SGHj625eNV"
+        "id": "r-dc35SA7oHs"
       },
       "outputs": [],
       "source": [
@@ -390,7 +381,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LqtK3m-95eNW"
+        "id": "Lg6w8BKf7oHt"
       },
       "outputs": [],
       "source": [
@@ -401,7 +392,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "41w2tORf5eNW"
+        "id": "ZM9KCD1L7oHt"
       },
       "outputs": [],
       "source": [
@@ -412,7 +403,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6g1z3qpY5eNX"
+        "id": "rQ4bM-3s7oHu"
       },
       "outputs": [],
       "source": [
@@ -423,7 +414,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Wid0ipzD5eNX"
+        "id": "UcttJOMs7oHu"
       },
       "outputs": [],
       "source": [
@@ -441,7 +432,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "bZsf1bVL5eNY"
+        "id": "HjILit6f7oHu"
       },
       "source": [
         "## Model Performance Analysis\n",
@@ -453,12 +444,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vwwIK_lP5eNY"
+        "id": "XbBmWear7oHv"
       },
       "outputs": [],
       "source": [
         "geoai.plot_performance_metrics(\n",
-        "    history_path=f\"{out_folder}/segformer_models/training_history.pth\",\n",
+        "    history_path=f\"{out_folder}/unet_models/training_history.pth\",\n",
         "    figsize=(15, 5),\n",
         "    verbose=True,\n",
         ")"
@@ -467,7 +458,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ts7C5og15eNZ"
+        "id": "e786l6Ss7oHv"
       },
       "source": [
         "![image](https://github.com/user-attachments/assets/9355446f-f9ba-4818-aedb-4bb5dee56813)"
@@ -476,7 +467,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9X9JrEv_5eNa"
+        "id": "huw0K_LL7oHw"
       },
       "source": [
         "## Performance Metrics\n",
@@ -537,7 +528,8 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "geo",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -553,12 +545,8 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "T4",
-      "include_colab_link": true
-    },
-    "accelerator": "GPU"
+      "provenance": []
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
