--- a/docs/examples/train_segmentation_model.ipynb
+++ b/docs/examples/train_segmentation_model.ipynb
@@ -3,10 +3,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mikadishen/Guara2_lotes_vagos/blob/main/docs/examples/train_segmentation_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "vscode": {
           "languageId": "raw"
         },
-        "id": "RIqmLGeY7oHT"
+        "id": "BJdFopp_vOQ5"
       },
       "source": [
         "# Train a Semantic Segmentation Model using Segmentation-Models-PyTorch\n",
@@ -23,7 +33,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "j3Pelp8R7oHY"
+        "id": "j87371zpvORB"
       },
       "outputs": [],
       "source": [
@@ -36,7 +46,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "z5WkO9RZ7oHe"
+        "id": "4QIA1l0CvORD"
       },
       "source": [
         "## Import libraries"
@@ -46,7 +56,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Cd9FLW9B7oHe"
+        "id": "Q3gdgByUvORE"
       },
       "outputs": [],
       "source": [
@@ -59,7 +69,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "NyTm1W_I7oHf"
+        "id": "umAQ2akqvORF"
       },
       "source": [
         "## Download sample data\n",
@@ -71,16 +81,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Cwh7Epoe7oHf"
+        "id": "tV2FfH4HvORF"
       },
       "outputs": [],
       "source": [
         "train_raster_url = (\n",
-        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tomates/treino_rec3.tif\"\n",
+        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/vexcel_extrato.tif\"\n",
         ")\n",
-        "train_vector_url = \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tomates/amostrastomate.geojson\"\n",
+        "train_vector_url = \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tree_vexcel_sample.geojson\"\n",
         "test_raster_url = (\n",
-        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/tomates/tomate_hidro2cm2.tif\"\n",
+        "    \"https://huggingface.co/datasets/mikadishen/vexcel_google_images/resolve/main/vexcel%20teste_full_ref.tif\"\n",
         ")"
       ]
     },
@@ -88,7 +98,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "l99-x7gx7oHh"
+        "id": "ilQqooqBvORG"
       },
       "outputs": [],
       "source": [
@@ -103,7 +113,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "7xyEMFUF7oHi"
+        "id": "J-cb3mjlvORH"
       },
       "source": [
         "## Visualize sample data"
@@ -113,7 +123,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LGJyzy1f7oHi"
+        "id": "r8Be92wDvORI"
       },
       "outputs": [],
       "source": [
@@ -124,22 +134,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "jijADwiB7oHk"
+        "id": "vMaaU_G5vORJ"
       },
       "outputs": [],
       "source": [
-        "geoai.view_vector_interactive(train_vector_path, tiles=train_raster_url)"
+        "geoai.view_vector_interactive(train_vector_path, tiles=train_raster_path)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "pcZF7sef7oHl"
+        "id": "ysZgY9RavORJ"
       },
       "outputs": [],
       "source": [
-        "geoai.view_raster(test_raster_url)"
+        "geoai.view_raster(test_raster_path)"
       ]
     },
     {
@@ -148,7 +158,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "zmYC9AGB7oHm"
+        "id": "lRYeZckhvORK"
       },
       "source": [
         "## Create training data\n",
@@ -160,7 +170,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tsP2ZgKl7oHm"
+        "id": "VFY_0wH5vORK"
       },
       "outputs": [],
       "source": [
@@ -181,7 +191,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "c11ZedRb7oHn"
+        "id": "r1w7yKkZvORL"
       },
       "source": [
         "## Train semantic segmentation model\n",
@@ -200,7 +210,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KDZmjbN27oHn"
+        "id": "c5ad09a-vORM"
       },
       "outputs": [],
       "source": [
@@ -214,8 +224,8 @@
         "    encoder_weights=\"imagenet\",\n",
         "    num_channels=3,\n",
         "    num_classes=2,  # background and building\n",
-        "    batch_size=8,\n",
-        "    num_epochs=100,\n",
+        "    batch_size=16,\n",
+        "    num_epochs=110,\n",
         "    learning_rate=0.001,\n",
         "    val_split=0.2,\n",
         "    verbose=True,\n",
@@ -228,7 +238,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "rWF_WWFl7oHo"
+        "id": "k63-3qcHvORM"
       },
       "source": [
         "### Example 2: SegFormer with resnet152 encoder"
@@ -238,7 +248,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "W09bXMW67oHo"
+        "id": "bOAjYANsvORM"
       },
       "outputs": [],
       "source": [
@@ -252,7 +262,7 @@
         "    num_channels=3,\n",
         "    num_classes=2,\n",
         "    batch_size=6,  # Smaller batch size for more complex model\n",
-        "    num_epochs=50,\n",
+        "    num_epochs=5,\n",
         "    learning_rate=0.0005,\n",
         "    val_split=0.2,\n",
         ")"
@@ -264,7 +274,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "kTotlGqa7oHp"
+        "id": "bGIASV93vORN"
       },
       "source": [
         "## Run inference\n",
@@ -276,12 +286,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HEdOzrp87oHp"
+        "id": "fZwVlXtovORN"
       },
       "outputs": [],
       "source": [
         "# Define paths\n",
-        "masks_path = \"naip_test_semantic_prediction.tif\"\n",
+        "masks_path = \"trees_vpires_prediction.tif\"\n",
         "model_path = f\"{out_folder}/unet_models/best_model.pth\""
       ]
     },
@@ -289,7 +299,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gh5LDdA97oHq"
+        "id": "xXkoN68tvORN"
       },
       "outputs": [],
       "source": [
@@ -311,10 +321,96 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "-u9uwwmhvORO"
+      },
+      "source": [
+        "## Output probability map (optional)\n",
+        "\n",
+        "You can also output the probability map by providing the `probability_path` parameter. This will save a multi-band raster where each band represents the probability for each class (0-1 range)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fIiyREsIvORO"
+      },
+      "outputs": [],
+      "source": [
+        "# Run inference with probability output\n",
+        "probability_path = \"trees_vpires_probability_map.tif\"\n",
+        "\n",
+        "geoai.semantic_segmentation(\n",
+        "    input_path=test_raster_path,\n",
+        "    output_path=masks_path,\n",
+        "    model_path=model_path,\n",
+        "    architecture=\"unet\",\n",
+        "    encoder_name=\"resnet34\",\n",
+        "    num_channels=3,\n",
+        "    num_classes=2,\n",
+        "    window_size=512,\n",
+        "    overlap=256,\n",
+        "    batch_size=4,\n",
+        "    probability_path=probability_path,  # Output probability map\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BmD6w7OovORO"
+      },
+      "outputs": [],
+      "source": [
+        "# Visualize probability map for building class (band 2)\n",
+        "geoai.view_raster(\n",
+        "    probability_path, indexes=[2], basemap=test_raster_path, backend=\"ipyleaflet\"\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tze2E0YkvORO"
+      },
+      "source": [
+        "You can also control the classification threshold for binary segmentation. By default, argmax is used, but you can specify a custom threshold:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pS0znmmlvORO"
+      },
+      "outputs": [],
+      "source": [
+        "# Run inference with custom probability threshold\n",
+        "masks_path_threshold = _\"trees_vpires_semantic_prediction_threshold2.tif\"\n",
+        "\n",
+        "geoai.semantic_segmentation(\n",
+        "    input_path=test_raster_path,\n",
+        "    output_path=masks_path_threshold,\n",
+        "    model_path=model_path,\n",
+        "    architecture=\"unet\",\n",
+        "    encoder_name=\"resnet34\",\n",
+        "    num_channels=3,\n",
+        "    num_classes=2,\n",
+        "    window_size=512,\n",
+        "    overlap=256,\n",
+        "    batch_size=4,\n",
+        "    probability_threshold=0.3,  # Only classify as building if probability >= 0.7\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "vscode": {
           "languageId": "raw"
         },
-        "id": "iTPA9iuA7oHq"
+        "id": "nj87wJVNvORP"
       },
       "source": [
         "## Vectorize masks\n",
@@ -326,7 +422,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ZTMNth2p7oHq"
+        "id": "EMc-jIFmvORP"
       },
       "outputs": [],
       "source": [
@@ -337,7 +433,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mnUsVzrP7oHr"
+        "id": "1BF-gl4AvORP"
       },
       "source": [
         "## Add geometric properties"
@@ -347,7 +443,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cfwfWCub7oHr"
+        "id": "XL2mT1jTvORP"
       },
       "outputs": [],
       "source": [
@@ -360,7 +456,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "ZuNOobqw7oHs"
+        "id": "pUBPOW2NvORQ"
       },
       "source": [
         "## Visualize results"
@@ -370,29 +466,29 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "r-dc35SA7oHs"
+        "id": "WuNLeNFmvORQ"
       },
       "outputs": [],
       "source": [
-        "geoai.view_raster(masks_path, nodata=0, basemap=test_raster_url, backend=\"ipyleaflet\")"
+        "geoai.view_raster(masks_path, nodata=0, basemap=test_raster_path, backend=\"ipyleaflet\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Lg6w8BKf7oHt"
+        "id": "mEI9GB86vORQ"
       },
       "outputs": [],
       "source": [
-        "geoai.view_vector_interactive(gdf_props, column=\"area_m2\", tiles=test_raster_url)"
+        "geoai.view_vector_interactive(gdf_props, column=\"area_m2\", tiles=test_raster_path)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ZM9KCD1L7oHt"
+        "id": "FpBlsADmvORQ"
       },
       "outputs": [],
       "source": [
@@ -403,26 +499,26 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rQ4bM-3s7oHu"
+        "id": "XHjp5vlavORR"
       },
       "outputs": [],
       "source": [
-        "geoai.view_vector_interactive(gdf_filtered, column=\"area_m2\", tiles=test_raster_url)"
+        "geoai.view_vector_interactive(gdf_filtered, column=\"area_m2\", tiles=test_raster_path)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UcttJOMs7oHu"
+        "id": "t5sOQR3FvORR"
       },
       "outputs": [],
       "source": [
         "geoai.create_split_map(\n",
         "    left_layer=gdf_filtered,\n",
-        "    right_layer=test_raster_url,\n",
+        "    right_layer=test_raster_path,\n",
         "    left_args={\"style\": {\"color\": \"red\", \"fillOpacity\": 0.2}},\n",
-        "    basemap=test_raster_url,\n",
+        "    basemap=test_raster_path,\n",
         ")"
       ]
     },
@@ -432,7 +528,7 @@
         "vscode": {
           "languageId": "raw"
         },
-        "id": "HjILit6f7oHu"
+        "id": "jVQXNSM2vORR"
       },
       "source": [
         "## Model Performance Analysis\n",
@@ -444,7 +540,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XbBmWear7oHv"
+        "id": "5-K_S--nvORR"
       },
       "outputs": [],
       "source": [
@@ -458,7 +554,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "e786l6Ss7oHv"
+        "id": "ZO0UDCgEvORS"
       },
       "source": [
         "![image](https://github.com/user-attachments/assets/9355446f-f9ba-4818-aedb-4bb5dee56813)"
@@ -467,7 +563,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "huw0K_LL7oHw"
+        "id": "Xqaaf91JvORS"
       },
       "source": [
         "## Performance Metrics\n",
@@ -545,7 +641,8 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
